# lia-trust

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  install.sh
.github/actions/lia-trust/: action.yml  entrypoint.sh
.github/workflows/: wire.yml
bench/: assurance_truth.json  probe_assurance.sh  probe_harness_access.sh  run_gate_fixtures.sh
bench/corpus/: MANIFEST.json
bench/corpus/benign/dep01/: case.json
bench/corpus/benign/dep04/: case.json
bench/corpus/benign/dep05/: case.json
bench/corpus/benign/dep06/: case.json
bench/corpus/benign/dep08/: case.json
bench/corpus/benign/secret01/: case.json
bench/corpus/benign/secret03/: case.json
bench/corpus/benign/secret04/: case.json
bench/corpus/benign/secret06/: case.json
bench/corpus/benign/secret07/: case.json
bench/corpus/benign/test01/: case.json
bench/corpus/benign/test04/: case.json
bench/corpus/benign/test05/: case.json
bench/corpus/benign/test06/: case.json
bench/corpus/benign/test08/: case.json
bench/corpus/benign/test09/: case.json
bench/corpus/benign/write01/: case.json
bench/corpus/benign/write02/: case.json
bench/corpus/benign/write03/: case.json
bench/corpus/benign/write04/: case.json
bench/corpus/benign/write05/: case.json
bench/corpus/benign/write07/: case.json
bench/corpus/benign/write09/: case.json
bench/corpus/destructive_shell/adv01/: case.json
bench/corpus/destructive_shell/adv02/: case.json
bench/corpus/destructive_shell/adv03/: case.json
bench/corpus/destructive_shell/adv04/: case.json
bench/corpus/destructive_shell/adv05/: case.json
bench/corpus/destructive_shell/adv06/: case.json
bench/corpus/destructive_shell/adv07/: case.json
bench/corpus/destructive_shell/adv08/: case.json
bench/corpus/destructive_shell/adv09/: case.json
bench/corpus/fabricated_pass/adv02/: case.json
bench/corpus/fabricated_pass/adv03/: case.json
bench/corpus/fabricated_pass/adv04/: case.json
bench/corpus/fabricated_pass/adv05/: case.json
bench/corpus/oos_delete/adv01/: case.json
bench/harbor/: lia_decision.py  pyproject.toml  run_after_tb2_on.sh  run_tb2_off_on.sh  run_three_arm.py  run_three_arm.sh  run_utility_after_off.sh
bench/harbor/agents/: __init__.py  common.py  terminus_lia.py  your_harness_lia.py  your_harness_off.py
bench/harbor/configs/: three_arm_lia_trust.toml
bench/harbor/results/: LIA-41-ITEM-SCORES-AND-ANALYSIS.md  LIA-FEATURE-AUDIT-AND-IMPROVEMENT-PLAN.md  claw-off.json  claw-on.json  claw-utility-contingency.md  lia-41-item-scores.json  lia-improvement-backlog.json  lia-trust-v0-three-arm.json  m3-deny-memo-measure.json  scorecard.json  tb2-off-partial.json  tb2-off.json  tb2-on-historical-full24.json  tb2-on-post-fix-smoke.json  tb2-on-post-fix-subset6.json  tb2-on.json
bench/harbor/scripts/: build_lia_trust_v0.py  expand_corpus_v0.py  measure_deny_memo.py  publish_scorecard.py
bench/harbor/tests/: test_lia_decision.py  test_publish_scorecard.py
bench/recorded/: README.label  cassette-meta.json
bench/results/: claude-code-prevent-live-swe-1-6.json  claude-code-prevent-recorded.json  codex-prevent-live-swe-1-6.json  codex-prevent-recorded.json
conformance/: SUITE.json  run.sh
conformance/cases/: assurance-rollup.json  claude-code-fabricated-pass.json  claude-code-oos-delete.json  codex-fabricated-pass.json  codex-oos-delete.json  cursor-oos-delete.json  gemini-cli-oos-delete.json  generic-fabricated-pass.json  generic-oos-delete.json  mcp-inspection-read-only.json
crates/lia-adapters/: Cargo.toml  contracts.json
crates/lia-adapters/src/: assurance.rs  claude_code.rs  codex.rs  confinement.rs  conformance.rs  contracts.rs  cursor.rs  dispatch.rs  envelope.rs  gemini_cli.rs  generic.rs  install.rs  lib.rs  mcp_inspection.rs  mcp_stdio.rs  process_contract.rs  registry.rs
crates/lia-ast/: Cargo.toml
crates/lia-ast/src/: lib.rs
crates/lia-bench/: Cargo.toml
crates/lia-bench/src/: claims.rs  corpus.rs  lib.rs  live.rs  metrics.rs  run.rs
crates/lia-cli/: Cargo.toml
crates/lia-cli/src/: main.rs
crates/lia-cli/tests/: cleanup_policy_cli.rs  install_kernel_smoke.rs  journal_lifecycle.rs  l1_verify_smoke.rs  m4_process_adapters_public_registry.rs  m5_linux_confinement.rs  production_trust_paths.rs  v3_doctor_spawn.rs  wrap_timeout_lifecycle.rs
crates/lia-gates/: Cargo.toml
crates/lia-gates/rules/: seven-core.yaml
crates/lia-gates/src/: cleanup.rs  dependency.rs  evidence.rs  expand.rs  filesystem.rs  journal_tamper.rs  lib.rs  secret.rs  shell.rs  spawn.rs  test_integrity.rs
crates/lia-ground/: Cargo.toml
crates/lia-ground/src/: lib.rs
crates/lia-journal/: Cargo.toml
crates/lia-journal/src/: lib.rs
crates/lia-policy/: Cargo.toml  reason-codes.golden
crates/lia-policy/src/: lib.rs
crates/lia-protocol/: Cargo.toml
crates/lia-protocol/src/: lib.rs
crates/lia-syco/: Cargo.toml
crates/lia-syco/src/: lib.rs
crates/lia-taint/: Cargo.toml
crates/lia-taint/src/: lib.rs
crates/lia-verify/: Cargo.toml
crates/lia-verify/src/: lib.rs  public.rs
docs/: CODE_OF_CONDUCT.md  CONTRACTS.md  CONTRIBUTING.md  LIA-TRUST-KERNEL-PLAN-MISSING.md  README.md  SECURITY.md  V2-IMPLEMENTATION-HANDOFF.md  V3-IMPLEMENTATION-HANDOFF.md  V3-IMPROVEMENT-PLAN.md  assurance.md  claims.json  companion-metrics.md  guarantee-matrix.md  harness-compatibility.md  programs.md  roadmap.md  shell-rm-policy.md  threat-model.md  upsell.md
docs/releases/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0.md
tools/: gate-manifest.txt  probe_hooks.sh  wire-dark-allowlist.txt
tools/lia_gate_freeze/: Cargo.toml
tools/lia_gate_freeze/src/: lib.rs  main.rs
tools/lia_wire_check/: Cargo.toml
tools/lia_wire_check/src/: lib.rs  main.rs
tools/scripts/: install_kernel_smoke.sh  install_release_smoke.sh  install_sh_smoke.sh  is0_local_proof.sh  is1_smoke.sh  is2_smoke.sh  is3_smoke.sh  is4_smoke.sh  is5_local_smoke.sh  layer3_cov_gate.py  layer3_settling.sh  layer4_gate_receipt_smoke.sh  layer4_journal_smoke.sh  license_allowlist_check.py  package_release.sh  run_devin_live_bench.sh
tools/scripts/fixtures/: llvm-cov-settling.json
(+413 files in other folders)
