[workspace]
resolver = "2"
members = [
    "crates/lia-protocol",
    "crates/lia-journal",
    "crates/lia-policy",
    "crates/lia-gates",
    "crates/lia-ast",
    "crates/lia-taint",
    "crates/lia-ground",
    "crates/lia-syco",
    "crates/lia-verify",
    "crates/lia-adapters",
    "crates/lia-bench",
    "crates/lia-cli",
    "tools/lia_wire_check",
    "tools/lia_gate_freeze",
]
default-members = ["crates/lia-cli"]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
authors = ["LIA Trust Kernel contributors"]
repository = "https://github.com/DITlieD/lia-trust"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
blake3 = "1"
ed25519-dalek = { version = "=2.2.0", features = ["rand_core"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
walkdir = "2"
tempfile = "3"
tree-sitter = "=0.24.7"
tree-sitter-rust = "=0.23.3"
tree-sitter-python = "=0.23.6"
tree-sitter-javascript = "=0.23.1"
uuid = { version = "1", features = ["v4", "serde"] }
libc = "0.2"
zeroize = "1.9"

lia-protocol = { path = "crates/lia-protocol" }
lia-journal = { path = "crates/lia-journal" }
lia-policy = { path = "crates/lia-policy" }
lia-gates = { path = "crates/lia-gates" }
lia-ast = { path = "crates/lia-ast" }
lia-taint = { path = "crates/lia-taint" }
lia-ground = { path = "crates/lia-ground" }
lia-syco = { path = "crates/lia-syco" }
lia-verify = { path = "crates/lia-verify" }
lia-adapters = { path = "crates/lia-adapters" }
lia-bench = { path = "crates/lia-bench" }
