[package]
name = "lia-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LIA adapters: claude-code hook, codex/MCP proxy, generic wrap, assurance report"
publish = false

[dependencies]
lia-gates = { workspace = true }
lia-protocol = { workspace = true }
lia-journal = { workspace = true }
lia-policy = { workspace = true }
lia-verify = { workspace = true }
lia-ast = { workspace = true }
lia-taint = { workspace = true }
lia-ground = { workspace = true }
lia-syco = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
