[package]
name = "lia-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter AST security predicates"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-javascript = { workspace = true }
lia-protocol = { workspace = true }
lia-gates = { workspace = true }
