[package]
name = "lia-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LIA empty-harness TRUST-INTEGRITY benchmark"
publish = false

[dependencies]
lia-protocol = { workspace = true }
lia-journal = { workspace = true }
lia-gates = { workspace = true }
lia-adapters = { workspace = true }
lia-ground = { workspace = true }
lia-syco = { workspace = true }
lia-verify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
