[package]
name = "lia-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LIA Trust Kernel CLI (lia)"
publish = false

[[bin]]
name = "lia"
path = "src/main.rs"

[dependencies]
lia-protocol = { workspace = true }
lia-journal = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
