[package]
name = "lia-ground"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic claim-to-evidence verification"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
lia-protocol = { workspace = true }
lia-gates = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
