[package]
name = "lia-journal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Append-only WAL sqlite journal with blake3 chain and Ed25519 receipts"

[dependencies]
lia-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
