[package]
name = "lia-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Canonical LIA event model and raw harness passthrough"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
