[package]
name = "lia-taint"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal untrusted-source to destructive-sink taint core"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
