[package]
name = "lia-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone offline verifier: evidence recompute, Ed25519, replay, signed VERIFICATION-REPORT"
publish = false

[dependencies]
lia-protocol = { workspace = true }
lia-journal = { workspace = true }
lia-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rusqlite = { workspace = true }
