[package]
name = "lia_wire_check"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LIA Layer-2 producer-without-consumer / wire-dark checker"
publish = false

[[bin]]
name = "lia_wire_check"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
